syntax = "proto3";
package api;

import "empty.proto";
import "google/protobuf/struct.proto";

option go_package = "api/protobuf";

message NewPeripheral {
  string ownerUserId = 1;
  string deploymentId = 2;
  NullableString hardwareId = 3;
  PeripheralType type = 4;
  string name = 5;
  string unit = 6;

  enum PeripheralType {
    THERMAL = 0;
    PARTICLE = 1;
  }
}

message Peripheral {
  string ownerUserId = 1;
  string deploymentId = 2;
  string id = 3;
  NullableString hardwareId = 4;
  PeripheralType type = 5;
  string name = 6;
  string unit = 7;

  enum PeripheralType {
    THERMAL = 0;
    PARTICLE = 1;
  }
}

message GetDeploymentPeripheralsRequest {
  string deploymentId = 1;
}

message GetPeripheralRequest {
  string peripheralId = 1;
}

message LinkHardwareRequest {
  string hardwareId = 1;
  string peripheralId = 2;
}

message EditPeripheralRequest {
  string peripheralId = 1;
  NullableString newName = 2;
  NullablePType newType = 3;
}

service PeripheralManagementService {
  rpc EditPeripheral(EditPeripheralRequest) returns (Peripheral);
  rpc GetPeripheral(GetPeripheralRequest) returns (Peripheral);
  rpc CreatePeripheral(NewPeripheral) returns (Peripheral);
  rpc RemovePeripheral(Peripheral) returns (Empty);
  rpc LinkHardware(LinkHardwareRequest) returns (Peripheral);
  rpc GetDeploymentPeripherals(GetDeploymentPeripheralsRequest) returns (stream Peripheral);
}

message NullableString {
  oneof kind {
    google.protobuf.NullValue null = 1;
    string data = 2;
  }
}

message NullablePType {
  oneof kind {
    google.protobuf.NullValue null = 1;
    api.Peripheral.PeripheralType data = 2;
  }
}
